[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tno.mpc.protocols.secure_comparison"
description = "Implementation of secure comparison protocol as given in https://eprint.iacr.org/2018/1100.pdf"
readme = "README.md"
authors = [{ name = "TNO PET Lab", email = "petlab@tno.nl" }]
maintainers = [{ name = "TNO PET Lab", email = "petlab@tno.nl" }]
keywords = [
    "TNO",
    "MPC",
    "multi-party computation",
    "protocols",
    "secure comparison",
]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Topic :: Security :: Cryptography",
]
urls = { Homepage = "https://pet.tno.nl/", Documentation = "https://docs.pet.tno.nl/mpc/protocols/secure_comparison/4.4.0", Source = "https://github.com/TNO-MPC/protocols.secure_comparison" }
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "tno.mpc.communication~=4.8",
    "tno.mpc.encryption_schemes.dgk~=3.0",
    "tno.mpc.encryption_schemes.paillier~=3.0",
    "tno.mpc.encryption_schemes.templates~=4.1,>=4.1.3",
    "tno.mpc.encryption_schemes.utils~=0.10",
]

[project.optional-dependencies]
gmpy = [
    "tno.mpc.encryption_schemes.dgk[gmpy]",
    "tno.mpc.encryption_schemes.paillier[gmpy]",
]
tests = [
    "pytest>=8.1",
    "pytest-asyncio",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = {attr = "tno.mpc.protocols.secure_comparison.__version__"}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.coverage.run]
branch = true
omit = ["*/test/*"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.isort]
profile = "black"
known_tno = "tno"
known_first_party = "tno.mpc.protocols.secure_comparison"
sections = "FUTURE,STDLIB,THIRDPARTY,TNO,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "LOCALFOLDER"

[tool.pylint.basic]
good-names = ["b", "c", "d", "i", "l", "n", "r", "s", "u", "x", "y", "z"]

[tool.pytest.ini_options]
addopts = "--fixture-pool-scope package"
filterwarnings = [  # warning handling is configured explicitly at the tests that run the entire protocol
    "ignore:.*ciphertext:UserWarning",
    "ignore:.*randomness:UserWarning",
]

[tool.mypy]
mypy_path = "src,stubs"
strict = true
show_error_context = true
namespace_packages = true
explicit_package_bases = true

[tool.tbump.version]
current = "4.4.0"
regex = '''
\d+\.\d+\.\d+(-(.*))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

    [[tool.tbump.file]]
    src = "pyproject.toml"
    search = "current = \"{current_version}\""

    [[tool.tbump.file]]
    src = "src/tno/mpc/protocols/secure_comparison/__init__.py"
    search = "__version__ = \"{current_version}\""

    [[tool.tbump.file]]
    src = "CITATION.cff"
    search = "version: {current_version}"

    [[tool.tbump.file]]
    src = "README.md"
    search = '\[here\]\(https:\/\/docs.pet.tno.nl/[^\.]*\/{current_version}'
