[metadata]
name = tno.mpc.protocols.secure_comparison
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Implementation of secure comparison protocol as given in https://eprint.iacr.org/2018/1100.pdf
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    protocols
    secure comparison
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.protocols.secure_comparison/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/protocols/secure_comparison/4.1.2
    Source Code = https://github.com/TNO-MPC/protocols.secure_comparison
version = attr: tno.mpc.protocols.secure_comparison.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.protocols.secure_comparison
    tno.mpc.protocols.secure_comparison.test
    tno.mpc.protocols.secure_comparison.test.integration
    tno.mpc.protocols.secure_comparison.test.unit
zip_safe = False
install_requires =
    tno.mpc.communication~=4.0
    tno.mpc.encryption_schemes.dgk~=2.0
    tno.mpc.encryption_schemes.paillier~=2.0, >=2.0.1
    tno.mpc.encryption_schemes.templates~=3.0
    tno.mpc.encryption_schemes.utils~=0.10
    typing_extensions~=4.0; python_version<"3.8"
namespace_packages =
    tno
    tno.mpc
    tno.mpc.protocols
include_package_data = True

[options.package_data]
tno.mpc.protocols.secure_comparison = py.typed

[options.extras_require]
gmpy =
    tno.mpc.encryption_schemes.dgk[gmpy]
    tno.mpc.encryption_schemes.paillier[gmpy]
tests =
    pytest
    pytest-asyncio
